         raw2hdf_res.rc,rzxcheck_res.rc,rzxdump_res.rc,rzxtool_res.rc,
         scl2trd_res.rc,snap2tzx_res.rc,snapconv_res.rc,tape2wav_res.rc,
         tapeconv_res.rc,tzxlist_res.rc: add version info to Windows executables
         (Sergio).
20150502 audio2tape.cc,createhdf.c,fmfconv.c,listbasic.c,profile2map.c,
         raw2hdf.c,rzxcheck.c,rzxdump.c,rzxtool.c,scl2trd.c,snap2tzx.c,
         snapconv.c,tape2wav.c,tapeconv.c,tzxlist.c: add --help option to the
         utilities (partially fixes bug #320) (Sergio).
20150502 man/{audio2tape.1,createhdf.1,listbasic.1,profile2map.1, raw2hdf.1,
         rzxcheck.1,rzxdump.1,rzxtool.1,scl2trd.1,snap2tzx.1,snapconv.1,
         tape2wav.1,tapeconv.1,tzxlist.1}: document --help and --version options
         (Sergio).
20150502 rzxdump.c,scl2trd.c: fix exit code when passed bad operands (Sergio).
20150503 tapeconv.c: remove double spacing and "the the" in help (thanks, 
         Stuart) (Sergio).
20150505 createhdf.c,fmfconv.c,listbasic.c,profile2map.c,raw2hdf.c,rzxcheck.c,
         rzxdump.c,rzxtool.c,scl2trd.c,snap2tzx.c,snapconv.c,tape2wav.c,
         tapeconv.c,tzxlist.c: reduce the number of unique strings (thanks,
         Stuart) (Sergio).
20150510 Makefile.am: use variables for flags rather than direct substitutions
         (Sergio).
20150510 m4/{Makefile.am,pkg.m4}: add pkg.m4 for PKG_CHECK_MODULES in case the
         platform doesn't have pkg-config installed (Sergio).
20150512 fmfconv_ff.c,rzxtool.c: avoid mixing declarations and code for C89
         compilers (Adrien Destugues).
20150517 audio2tape.cc: use char* for progname for consistency with utils.c
         (thanks, Stuart) (Fred).
20150517 fmfconv.c,fmfconv_avi.c: remove a couple more warnings (Fred).
20150517 tape2wav.c: abs() takes an int so use atoi() to match types (Fred).
20150527 compat.h,compat/{amiga/{basename.c,osname.c},unix/{basename.c,
         osname.c},win32/osname.c}: add missing includes (Stuart).